this should fix phone alignment

--- a/css/styles-contact.css
+++ b/css/styles-contact.css
@@ -615,6 +615,12 @@ nav a:hover {
 
 
  @media screen and (min-width:768px) and (max-width:1024px) {
+   #whole-body {
+     margin-left: 15%;
+   }
+   #header-content {
+     margin-left: 10%;
+   }
   .navbar {
     padding-left: 4%;
     padding-right: 2%;
